- The GameBoardData is now returning an unmodifiable copy of the array. - Fixed a bug with the "En passant" when the pieces are not with the default pattern - The "En passant" move is now showing correctly on the board